--- a/notebooks/03-part-1.ipynb
+++ b/notebooks/03-part-1.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td>Command (R,8)</td></tr><tr><td>1</td><td>Command (U,5)</td></tr><tr><td>2</td><td>Command (L,5)</td></tr><tr><td>3</td><td>Command (D,3)</td></tr></tbody></table>"
       ]
      },
-     "execution_count": 326,
+     "execution_count": 348,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "6"
       ]
      },
-     "execution_count": 327,
+     "execution_count": 349,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [
     {
@@ -261,12 +261,13 @@
        "Point (3,2)"
       ]
      },
-     "execution_count": 329,
+     "execution_count": 351,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "open Wire\n",
     "\"R8,U5,L5,D3\" |> Wire.ofString |> Wire.getPoints |> Seq.rev |> Seq.head |> (string)"
    ]
   },
@@ -294,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [
     {
@@ -303,12 +304,13 @@
        "<table><thead><tr><th>Tag</th><th>Item1</th><th>Item2</th></tr></thead><tbody><tr><td>0</td><td>2</td><td>3</td></tr></tbody></table>"
       ]
      },
-     "execution_count": 330,
+     "execution_count": 352,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "open Wire\n",
     "\"U7,R6,D4,L4\" |> Wire.ofString |> Wire.getPoints |> Seq.rev |> Seq.head"
    ]
   },
@@ -327,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 353,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +338,7 @@
        "set [Point (0,0); Point (3,3); Point (6,5)]"
       ]
      },
-     "execution_count": 331,
+     "execution_count": 353,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +378,7 @@
        "6"
       ]
      },
-     "execution_count": 332,
+     "execution_count": 354,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +429,7 @@
        "159"
       ]
      },
-     "execution_count": 333,
+     "execution_count": 355,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 356,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +464,7 @@
        "135"
       ]
      },
-     "execution_count": 334,
+     "execution_count": 356,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 357,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,25 +508,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "Installing package Expecto.done!"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/plain": [
        "That's the right answer! You are one gold star closer to rescuing Santa."
       ]
      },
-     "execution_count": 336,
+     "execution_count": 358,
      "metadata": {},
      "output_type": "execute_result"
     }
